<resources>
    <string name="app_name">Online Tobacco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already Have An Account! Log In</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account! Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="signinEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="f_icon_todo">TODO</string>
    <string name="google_icon_todo">TODO</string>
    <string name="twitter_icon_todo">TODO</string>
    <string name="reg_f_icon_todo">TODO</string>
    <string name="reg_twitter_icon_todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
</resources>